@@ -1,5 +1,12 @@
 2008-02-20  Matthias Clasen  <mclasen@redhat.com>
 
+	* clock-location-tile.c: Try harder to avoid resizing
+	the popup. 
+
+	* clock.c: Refresh the tiles when the timezone changes.
+
+2008-02-20  Matthias Clasen  <mclasen@redhat.com>
+
 	* clock-location.c (clock_location_get_offset): Take daylight
 	savings time into account.
 
